# bigquery

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  connector.py  pyproject.toml  requirements.txt
.github/workflows/: validate-definitions.yml
definition/: connector.json  type-map-read.json  type-map-write.json  type-map.json
